src/my_robot_pkg/log/build_2026-03-14_00-04-20/my_robot_pkg/stderr.log
  File "/home/anand/ros2_ws/src/my_robot_pkg/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/temprature_publisher.py", line 21
    main(args=None):
                   ^
SyntaxError: invalid syntax

